Fixing headers buttons align on mobile

--- a/src/app/shared/components/casa-arena-header/casa-arena-header.component.css
+++ b/src/app/shared/components/casa-arena-header/casa-arena-header.component.css
@@ -48,6 +48,10 @@
         align-items: flex-start;
     }
 
+    #navbarNav .nav-link {
+        display: block;
+    }
+
     .casa-arena-cart-item {
         margin-left: 0;
     }
